@@ -1,14 +1,5 @@
 ## Getting Started
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+In order to compile and run this program, you will need JavaFX installed and configured on your device. Additionally, if using VSC, add the following to your project's launch.json file within the second pair of braces:
 
-## Folder Structure
-
-The workspace contains two folders by default, where:
-
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-## Dependency Management
-
-The `JAVA DEPENDENCIES` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-pack/blob/master/release-notes/v0.9.0.md#work-with-jar-files-directly).
+"vmArgs": "--module-path /Path/to/your/JavaFX/src/here --add-modules javafx.controls,javafx.fxml,javafx.media",
